config("myconfig") {
  include_dirs = [ "include" ]
  defines = ["SPDLOG_NO_EXCEPTIONS","SPDLOG_COMPILED_LIB"]
}


static_library("spdlog") {
  public_configs = [ ":myconfig" ]
  sources = [
    "src/spdlog.cpp",
    "src/stdout_sinks.cpp",
    "src/color_sinks.cpp",
    "src/file_sinks.cpp",
    "src/async.cpp",
    "src/cfg.cpp",
    "src/bundled_fmtlib_format.cpp"
  ]
}
